<resources>
    <string name="app_name">Ĉifri</string> <!-- Cxu vi parolas Esperanton? -->
    <string name="clipboard_clip_label">cxifri</string>
    <string name="hint_password">Password</string>
    <string name="hint_privatemessage">Private message</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="share_using">Share using</string>
    <string name="manage_key_button_text">Manage</string>
    <string name="add_new_password_key_button_label">Add new password based key</string>
    <string name="button_save_title">Save</string>
    <string name="button_cancel_title">Cancel</string>
    <string name="existing_keys">Existing keys:</string>
    <string name="manage_keys">Manage Keys</string>
    <string name="key_name_hint">Key name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="require_device_password_or_fingerprint">Require device password or fingerprint</string>
    <string name="reply">Reply</string>
    <string name="quote">Quote</string>
    <string name="add_a_new_key">Add a new password based key:</string>
    <string name="add_a_new_key_menu_item">Add a new key</string>
    <string name="encrypt_decrypt_activity_label">cxifri</string>
    <string name="use_androidkeystore_if_supported">Store in AndroidKeyStore if supported</string>
    <string name="aks_comment">AndroidKeyStore is a storage backed by the device encryption hardware\nCheck your device manual to ensure such hardware is present\n\nStoring key with AndroidKeyStore is generally more secure\n\nOn some devices access to information stored in AndroidKeyStore can be lost after change of device password (and possibly under other similar circumstances)</string>
    <string name="generate_random_key">Generate Random Key (QR code)</string>
    <string name="scan_random_key">Scan a random key (QR code)</string>
    <string name="title_activity_random_key_generation">Random Key</string>
    <string name="title_activity_random_key_scan">Scan Random Key</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_warning">Warning: after you hit \'save\' you would not be able to see this QR code again</string>
    <string name="enter_key_name">Enter Key Name:</string>
    <string name="key_name">Key name</string>
    <string name="title_activity_encrypt_decrypt">EncryptDecryptActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about">About</string>
    <string name="key_choose">Key: &lt;choose&gt;</string>
    <string name="encrypted_message">Message</string>
    <string name="share_non_encrypted_text_question_mark">Share non-encrypted text?</string>
    <string name="failed_to_decrypt">Failed to decrypt: wrong key or message corrupted</string>
    <string name="key_is_too_short">Key is too short (min 8 chars, recommended 14)</string>
    <string name="key_type_below">Key: </string>
    <string name="key_format" formatted="false">Key: %s</string>
    <string name="text_password">Text password</string>
    <string name="revoked_key">REVOKED KEY!</string>
    <string name="encrypted_by_aks_key">Encrypted by AndroidKeyStore</string>
    <string name="stored_as_pt_key">Stored as Plain Text</string>
    <string name="select_a_key">Select a key</string>
    <string name="failed_to_encrypt">Failed to encrypt - Android Key Store error? (did you recently change your device password?)</string>
    <string name="delete_all_keys">Remove all keys</string>
    <string name="delete_all_keys_question">Delete All Keys?</string>
    <string name="delete_all_keys_can_be_undone">This can\'t be undone</string>
    <string name="delete_all_keys_second_confirmation_question">Delete all keys? Last chance to cancel</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line0">Please read:</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line01">Options for creating a new key:</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line1">1) Create a password based key</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line11">You and other person should enter the same password</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line12">Use a strong password to make it secure:</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line13">14 symbols minimum, including lower and upper case, digits and special symbols is recommended; alternatively use a long random phrase containing 6–7 words, relevant xkcd: https://xkcd.com/936/</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line2">2) Generate a random binary key (3 * 256 bits of pure entropy):</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line3">First person generates random key and shows the QR code to a second person</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line4">Second person scans the QR code to read the key off the first device</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line5">Note: after random key is saved, there is no way to show QR code again or retrieve the key in any other way, this is done on purpose so you cannot be forced to share the key: app knows the key, it can encrypt and decrypt messages, but key cannot leave the app</string>
    <string name="sevaral_options_available_for_creating_a_new_key_line6">Please choose from the following options: </string>
    <string name="delete_key">Delete</string>
    <string name="key_actions">Actions</string>
    <string name="message_auth_status_is_valid">Message Auth Status: valid</string>
    <string name="matched_key" formatted="false">Matched key: %s</string>
    <string name="text_copied">Copied</string>
    <string name="text_cleared">Cleared</string>
    <string name="text_pasted">Pasted</string>
    <string name="text_didnt_match_keys">No matching keys found to decrypt</string>
    <string name="key_saved">Saved</string>
    <string name="key_name_is_empty">Key name is empty</string>
    <string name="passwords_didnt_match">Passwords didn\'t match!</string>
    <string name="password_is_empty">Password is empty</string>

    <string name="password_stength_notice">Password strength notice</string>
    <string name="still_proceed_question" formatted="false">It is roughly estimated that given password can be bruteforced:\nOn a high-end CPU in %s\nOn a high-end GPU in %s\nOn a cluster of 1000 GPUs in %s\nContinue?</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="format_days"  formatted="false">%.0f days</string>
    <string name="format_weeks" formatted="false">%.0f weeks</string>
    <string name="format_months" formatted="false">%.0f months</string>
    <string name="format_years" formatted="false">%.0f years</string>
    <string name="please_wait_deriving_the_password_based_key">Please wait, deriving the password based key\n(PKCS5S2/SHA256, 100000 iterations)</string>
    <string name="key_revoked_title_fmt" formatted="false">Key %s is revoked</string>
    <string name="key_revoked_desc">This is a key revoke message, remove party indicated that key is no longer secure and should no longer be used</string>
    <string name="revoke_key">Revoke</string>
    <string name="actions_for_key_fmt" formatted="false">Actions for key %s</string>
    <string name="key_is_revoked">KEY IS REVOKED</string>
    <string name="re_send_revocation_message">Send Revocation Message</string>

    <string name="revoked_suffix"> [REVOKED]</string>

    <string name="key_is_revoked_warning_title">Key is revoked!</string>
    <string name="key_is_revoked_warning_text">Continue encrypting using insecure key?</string>
    <string name="revoke_key_question" formatted="true">Revoke key %s?</string>
    <string name="delete_key_question" formatted="true">Delete key %s?</string>
    <string name="about_cxifri">About Ĉifri</string>
    <string name="simple_toy_ish_text_encryption_decryption_utility">Simple toy-ish text encryption / decryption utility</string>
    <string name="no_warranty_of_any_kind_use_at_your_own_risk_ndeveloper_s_of_this_app_applied_all_the_best_effort_to_make_the_app_as_secure_as_possible_but_no_warranty_can_be_given">NO WARRANTY OF ANY KIND, USE AT YOUR OWN RISK Developer(s) of this app applied all the best effort to make the app as secure as possible, but no warranty can be given</string>
    <string name="encryption_is_done_using_chained_aes_twofish_serphent_cipher">Encryption is done using chained AES-Twofish-Serphent cipher</string>
    <string name="eax_mode_is_used_for_message_authentication">EAX mode is used for message authentication</string>
    <string name="base61_encoding_is_used_to_generate_message_containing_only_symbols_a_z_a_z_and_0_9">Base61 encoding is used to generate message containing only symbols A-Z, a-z and 0-9</string>
    <string name="source_code_is_available_on_github_under_apache_license_nhttps_github_com_quarck_cxifri">Source code is available on github under apache license: https://github.com/quarck/cxifri</string>
    <string name="encryption_is_done_using_bouncy_castle_library_https_bouncycastle_org">Encryption is done using Bouncy Castle library [https://bouncycastle.org/]</string>
    <string name="parts_of_zxing_https_github_com_zxing_zxing_library_were_used_for_qr_code_functionality">Parts of ZXIng [https://github.com/zxing/zxing] library were used for QR-code functionality</string>
    <string name="c_sergey_parshin_quarck_gmail_com_2018">(c) Sergey Parshin (quarck@gmail.com), 2018</string>
</resources>
