<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/baseline_clear_24"
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/outline_file_copy_24"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_paste"
        android:icon="@drawable/outline_input_24"
        android:title="@string/paste"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_keys"
        android:title="@string/manage_keys"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
