<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.AboutActivity"
        tools:showIn="@layout/activity_about"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextMedium"
            android:layout_margin="10dp"
            android:text="@string/about_cxifri"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:text="@string/simple_toy_ish_text_encryption_decryption_utility"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:text="@string/no_warranty_of_any_kind_use_at_your_own_risk_ndeveloper_s_of_this_app_applied_all_the_best_effort_to_make_the_app_as_secure_as_possible_but_no_warranty_can_be_given"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:text="@string/encryption_is_done_using_chained_aes_twofish_serphent_cipher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:text="@string/eax_mode_is_used_for_message_authentication"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:text="@string/base61_encoding_is_used_to_generate_message_containing_only_symbols_a_z_a_z_and_0_9"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/source_code_is_available_on_github_under_apache_license_nhttps_github_com_quarck_cxifri"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/encryption_is_done_using_bouncy_castle_library_https_bouncycastle_org"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/parts_of_zxing_https_github_com_zxing_zxing_library_were_used_for_qr_code_functionality"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextSmall"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/c_sergey_parshin_quarck_gmail_com_2018"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\n\nTODOs:"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dark theme"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Key replacement / revoke"/>


    </LinearLayout>

    </ScrollView>
    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>