<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textViewKeyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/existing_keys"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_margin="16sp"
         />

    <LinearLayout
        android:id="@+id/layoutExistingKeysRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddNewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_key_button_label"
        android:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/layoutAddKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword|textNoSuggestions"
            android:hint="@string/hint_password"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            >

            <Button
                android:id="@+id/buttonSaveKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_title"
                />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel_title"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>