<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/ToolbarTitle"
            android:elevation="10dp"
            tools:targetApi="m"
            />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/buttonKeySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_choose"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            style="?android:attr/buttonStyle"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword|textNoSuggestions"
            android:hint="@string/hint_password"
            android:visibility="gone"
            android:importantForAutofill="no"
            tools:targetApi="o"
            />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="_key_name_placeholder_ some long long"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            tools:ignore="HardcodedText"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonEncrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encrypt"
                android:layout_margin="5sp"
                android:layout_gravity="center"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonDecrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decrypt"
                android:layout_margin="5sp"
                android:layout_gravity="center"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="5"
        android:text=""
        android:hint="@string/hint_privatemessage"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:layout_below="@id/appBarLayout"
        android:layout_above="@id/linearLayoutButtons"
        android:gravity="top|start"
        />


</RelativeLayout>